Filtered the data

--- a/Chronic Disease Indicator Analysis.Rmd
+++ b/Chronic Disease Indicator Analysis.Rmd
@@ -31,33 +31,47 @@ library(janitor)
 # creating a tibble
 
 tbl_data <- tibble(data)
-
-tbl_data
 ```
 
 
 
 ```{r}
-sub_data <- select(tbl_data, YearStart, LocationDesc, Topic, Question, StratificationCategory1, Stratification1, DataSource)
-
-sub_data
+sub_data <- select(tbl_data, 
+                   YearStart, 
+                   YearEnd, 
+                   LocationDesc, 
+                   Topic, 
+                   Question, 
+                   StratificationCategory1, 
+                   Stratification1, 
+                   DataSource, 
+                   DataValue)
 ```
 
 
 ```{r}
 # Filtering data
-fil_data <- filter(sub_data, DataSource == "Death Certificate", StratificationCategory1 == "Gender")
+fil_data <- filter(sub_data, 
+                   DataSource == "Death Certificate", 
+                   StratificationCategory1 == "Gender",
+                   Stratification1 == "Female",
+                   Question == "Cancer of the female breast, mortality")
+
+fil_data[!fil_data$LocationDesc %in% "United States",]
 
 fil_data
+
+pull(fil_data, "Question") %>% table()
+
+fil_data <- unite(fil_data, YearStart, YearEnd, sep = "-", col = "Years", remove = TRUE)
+
 
 ```
 ```{r}
 # Check which types of Cancers killed the most, and where + when 
 
-pull(fil_data, "LocationDesc") %>% table()
+pull(fil_data, "Years") %>% table()
 
-data
-length(unique(fil_data$LocationDesc))
 
 
 ```
