Removed function that was loading irrelevant stuff

--- a/Chronic Disease Indicator Analysis.Rmd
+++ b/Chronic Disease Indicator Analysis.Rmd
@@ -4,11 +4,7 @@ author: "Mel"
 date: "2024-07-29"
 output: html_document
 ---
-# Header
-## Subheader
 
-**bold**
-*italicized*
 ```{r}
 # reading in file/data
 
@@ -22,6 +18,12 @@ data <- read.csv(file)
 ```{r}
 # Load dplyr
 library(tidyverse)
+library(dplyr)
+
+# Ggplot2
+
+install.packages("ggplot2")
+library(ggplot2)
 
 # Janitor package helps with lots of naming fixes
 library(janitor)
@@ -33,46 +35,35 @@ library(janitor)
 tbl_data <- tibble(data)
 ```
 
-
-
-```{r}
-sub_data <- select(tbl_data, 
-                   YearStart, 
-                   YearEnd, 
-                   LocationDesc, 
-                   Topic, 
-                   Question, 
-                   StratificationCategory1, 
-                   Stratification1, 
-                   DataSource, 
-                   DataValue)
-```
-
-
 ```{r}
 # Filtering data
-fil_data <- filter(sub_data, 
+fil_data <- filter(data, 
                    DataSource == "Death Certificate", 
                    StratificationCategory1 == "Gender",
                    Stratification1 == "Female",
-                   Question == "Cancer of the female breast, mortality")
-
-fil_data[!fil_data$LocationDesc %in% "United States",]
-
-fil_data
-
-pull(fil_data, "Question") %>% table()
+                   Question == "Cancer of the female breast, mortality",
+                   DataValueType == "Average Annual Age-adjusted Rate")
 
 fil_data <- unite(fil_data, YearStart, YearEnd, sep = "-", col = "Years", remove = TRUE)
 
+group_by(fil_data, LocationDesc, .add = TRUE)
 
 ```
-```{r}
-# Check which types of Cancers killed the most, and where + when 
 
+```{r}
 pull(fil_data, "Years") %>% table()
 
+fil_data <- filter(fil_data,
+                   Years == "2015-2019")
+```
 
+```{r}
+# Graphing data
+
+plt1 <- ggplot(data = fil_data, mapping = aes(x = Years, 
+                                              y = DataValue)) +
+geom_bar()
+theme(legend.position = "bottom")
 
 ```
 
